Buttons will show when they have been pressed. Changed navigation bar to use icons.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "react-native-vector-icons": "^8.0.0"
   },
   "private": true
 }
