--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.13.12",
     "react-switch": "^6.0.0"
   },
