--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "crypto-es": "^1.2.7",
     "expo": "^40.0.0",
     "expo-constants": "^9.3.5",
+    "expo-crypto": "~8.4.0",
     "expo-notifications": "^0.9.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
