--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "crypto-es": "^1.2.7",
     "expo": "^40.0.0",
     "expo-constants": "^9.3.5",
     "expo-notifications": "^0.9.0",
