--- a/package.json
+++ b/package.json
@@ -8,37 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
     "@react-native-async-storage/async-storage": "^1.14.1",
-    "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "^1.12.0",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "crypto-es": "^1.2.7",
     "expo": "^40.0.0",
-    "expo-checkbox": "~1.0.0",
-    "expo-constants": "^9.3.5",
-    "expo-crypto": "~8.4.0",
-    "expo-notifications": "^0.9.0",
+    "expo-constants": "~9.3.3",
+    "expo-notifications": "~0.8.2",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-custom-picker": "^0.4.0",
     "react-native-dropdown-picker": "^4.0.2",
-    "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
-    "react-native-swiper": "^1.6.0",
-    "react-native-web": "^0.13.18",
-    "react-switch": "^6.0.0"
+    "react-native-screens": "~2.15.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
     "react-native-vector-icons": "^8.0.0"
   },
   "private": true
